--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ INGREDIENTS
 </li>
 <li>If you didn't think these cookies could get any better, think again! Get creative! Instead of the 2 cups semisweet chocolate chips, make with 1/2 cup each of semisweet chocolate chips, peanut butter chips, or butterscotch chips. OMG these are good!
 </li>
-<li>Got questions? Our experts have the answers. me@fakeemail.com Email Me
+<li>Got questions? Our experts have the answers. <a href="me@fakeemail.com">Email Me</a>
 </li>
 </ul>
 
